// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge overview 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
    style="height: 100%;"
  >
    <div
      class="css-16bz59z"
    >
      badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge overview 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
    style="height: 100%;"
  >
    <div
      class="css-1y3z5mn"
    >
      badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge overview 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
    style="height: 100%;"
  >
    <div
      class="css-b6gnw3"
    >
      badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge overview 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
    style="height: 100%;"
  >
    <div
      class="css-1i2j0uz"
    >
      badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge overview 5 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
    style="height: 100%;"
  >
    <div
      class="css-y08vn1"
    >
      badge
    </div>
  </div>
</DocumentFragment>
`;
